--- a/stage-1-html-css/day-1-semantics/index.html
+++ b/stage-1-html-css/day-1-semantics/index.html
@@ -10,22 +10,34 @@
     <header>
         <h1>Даниил Михайлов</h1>
         <p>Начинающий Front-end разработчик</p>
+        <nav class="menu">
+            <div class="menu_tab">
+                <button class="header_button" type="button">Обо мне</button>
+            </div>
+            <div class="menu_tab">
+                <button class="header_button" type="button">Навыки</button>
+            </div>
+            <div class="menu_tab">
+                <button class="header_button" type="button">Контакты</button>
+            </div>
+        </nav>
     </header>
     <main>
-        <section>
-            <h2>Обо мне</h2>
-            <p>Хочу попробовать себя во Front-end разработке</p>
-        </section>
+        <div class="about_and_skills">
+            <section>
+                <h2>Обо мне</h2>
+                <p>Хочу попробовать себя во Front-end разработке</p>
+            </section>
 
-        <section>
-            <h2>Навыки</h2>
-            <ul>
-                <li>HTML5 (Семантика)</li>
-                <li>Git и Github</li>
-                <li>Vs code и раширения</li>
-            </ul>
-        </section>
-
+            <section>
+                <h2>Навыки</h2>
+                <ul>
+                    <li>HTML5 (Семантика)</li>
+                    <li>Git и Github</li>
+                    <li>Vs code и раширения</li>
+                </ul>
+            </section>
+        </div>
         <section>
             <h2>Контакты</h2>
             <address>
